_mocha/au_day1/router/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  router
  namespace: astra
  labels:
    app:  router
spec:
  selector:
    matchLabels:
      app: router
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  router
    spec:
      serviceAccountName: router
      containers:
      - name:  router
        image: 537275484040.dkr.ecr.us-east-1.amazonaws.com/astra-router:v1
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "10"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1
            memory: 1024Mi

        ports:
        - containerPort: 8080
          name:  router
          
      restartPolicy: Always
